Modyfikacja i dodanie metod do klasy RepozytoriumPacjentow